--- a/templates/survey.html
+++ b/templates/survey.html
@@ -62,8 +62,8 @@
 
   <!-------------------- SURVEY PAGE -------------------->
   <section class="container-fluid min-vh-100 px-0 align-items-center">
-    <div class="overlay-survey-page-section min-vh-100 survey-bg" style="background-image: url({{ url_for('static', filename='img/animated-dog-4.jpg') }})">
-      <div class="container">
+    <div class="overlay-survey-page-section min-vh-100 survey-bg" style="background-image: url({{ url_for('static', filename='img/animated-dog-3.jpg') }})">
+      <div class="survey-container container">
 
         <!-- Survey questions will be displayed here -->
         <div id="surveyElement"></div>
