--- a/templates/find_dog.html
+++ b/templates/find_dog.html
@@ -187,8 +187,8 @@
 
   <!-------------------- DOG LIST -------------------->
   <section class="container-fluid min-vh-100 px-0" id="dog-list-section">
-    <div class="overlay-dog-list-section min-vh-100 find-dog-bg" style="background-image: url({{ url_for('static', filename='img/animated-dog-3.jpg') }})">
-      <div class="container">
+    <div class="overlay-dog-list-section min-vh-100 find-dog-bg" style="background-image: url({{ url_for('static', filename='img/animated-dog-4.jpg') }})">
+      <div class="dog-list-container container">
 
         <div class="dog-list row gy-5" id="data-container"></div>
         <div id="pagination"></div>
