--- a/static/css/dog_info.css
+++ b/static/css/dog_info.css
@@ -193,6 +193,7 @@ body {
 .dog-post-img {
   /* height: 41.5vh; */
   height: calc((100vh - 144px)/2);
+  max-width: 100vw;
   object-fit: contain;
 
   border: lightgray 2px solid;
