--- a/templates/find_dog.html
+++ b/templates/find_dog.html
@@ -8,15 +8,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>서초 AI 프로젝트 제목</title>
 
-  <!-------------------- MAIN CSS -------------------->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/find_dog.css') }}">
-
   <!-------------------- CSS IMPORTS -------------------->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link href="https://unpkg.com/survey-jquery/modern.min.css" type="text/css" rel="stylesheet">
   <link href="https://unpkg.com/survey-jquery/defaultV2.min.css" type="text/css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.4/pagination.css" />
+
+  <!-------------------- MAIN CSS -------------------->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/find_dog.css') }}">
 
   <!-------------------- JS IMPORTS -------------------->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -198,17 +198,17 @@
   </section>
 
   <script id="template-dog-list" type="text/template">
-    <div class="col-12 col-xl-3 col-lg-4 col-md-6 col-sm-12 dog-card-container">
-      <div class="card dog-card border-0 rounded-3 shadow-sm dog-thumbnail-box" id="{desertionNo}" onclick="moveToDogPosts(this)">
+    <div class="dog-card-container col-12 col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="dog-card card shadow-sm" id="{desertionNo}" onclick="moveToDogPosts(this)">
         
         <div class="row g-0">
           
-          <div class="col-6 col-md-12">
-            <img class="mx-auto d-block img-fluid dog-thumbnail-img" src="{popfile}" alt="Card image cap" style="height: 15rem;">
+          <div class="dog-thumbnail-container col-6 col-md-12">
+            <img class="dog-thumbnail-img mx-auto d-block img-fluid" src="{popfile}" alt="Card image cap" style="height: 15rem;">
           </div> 
 
-          <div class="col-6 col-md-12">
-            <div class="card-body rounded-3 fw-bold">
+          <div class="card-body-container col-6 col-md-12">
+            <div class="card-bottom card-body fw-bold">
               <div class="d-flex">
                 <div class="">{kindCd}</div>
                 <div class="ms-auto">{processState}</div>
