--- a/static/css/find_dog.css
+++ b/static/css/find_dog.css
@@ -9,7 +9,7 @@ html {
  * Body BG color
  */
 body {
-  background-color: #90C9C2 !important;
+  background-color: #9398B5 !important;
 }
 
 /**
@@ -171,7 +171,7 @@ body {
 }
 
 .overlay-dog-list-section .container {
-  padding-top: 10rem;
+  padding-top: 4rem;
 }
 
 /**
@@ -192,9 +192,44 @@ body {
   min-height: 100%;
   object-fit: cover;
 
-  border-radius: 1.5rem 1.5rem 0 0;
+  /* border-radius: 1.5rem 1.5rem 0 0; */
 }
 
 .card-bottom {
   border-radius: 1.5rem !important;
+}
+
+/**
+ * Pagination
+ */
+.paginationjs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.paginationjs.paginationjs-theme-blue .paginationjs-go-input>input[type=text],
+.paginationjs.paginationjs-theme-blue .paginationjs-pages li {
+  border: #19B394 1px solid;
+  /* border-color: #19B394; */
+}
+
+.paginationjs.paginationjs-theme-blue .paginationjs-pages li.active>a {
+  background: #19B394;
+  color: #fefaf6;
+}
+
+.paginationjs.paginationjs-theme-blue .paginationjs-pages li>a {
+  color: #19B394;
+}
+
+.paginationjs-ellipsis {
+  background-color: #fefaf6 !important;
+}
+
+.paginationjs-pages > ul {
+  font-size: 2rem !important;
 }
