--- a/templates/find_dog.html
+++ b/templates/find_dog.html
@@ -214,7 +214,7 @@
         <!-- Modal Footer -->
         <div class="modal-footer align-items-center justify-content-center d-flex">
           <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
-          <button type="button" class="btn btn-primary">검색하기</button>
+          <button type="button" class="filter-submit-button btn btn-primary" onclick="filterSearch()">검색하기</button>
         </div>
 
       </div>
