2022/09/07 Filter Server Data CallBack

--- a/templates/find_dog.html
+++ b/templates/find_dog.html
@@ -157,7 +157,7 @@
             <div class="col-9">
 
               <div class="filter-region-container row ps-0">
-                <select id="city-filter-list-toggle" class="filter-state form-select col" style="padding-right: 12px;">
+                <select id="city-filter-list-toggle" class="filter-state form-select col" name="city-filter-list-toggle" style="padding-right: 12px;">
                   <option selected value="전체">모든 지역</option>
                   <option value="서울특별시">서울특별시</option>
                   <option value="부산광역시">부산광역시</option>
@@ -184,7 +184,7 @@
                   <option selected value="전체">전체</option>
                 </select>
 
-                <select id="city-filter-list-after" class="filter-city form-select col" style="display: none; padding-right: 12px;">
+                <select id="city-filter-list-after" class="filter-city form-select col" name="city-filter-list-after" style="display: none; padding-right: 12px;">
                   <option id="city-filter-default" selected value='전체'>전체</option>
                 </select>
               </div>
@@ -203,7 +203,7 @@
             </div>
 
             <div class="col-9 ps-0">
-              <select class="filter-breed form-select" style="padding-right: 12px;">
+              <select id="filter-breed" class="filter-breed form-select" name="filter-breed" style="padding-right: 12px;">
               </select>
             </div>
 
