2022/09/08 DB close fix

--- a/static/css/find_dog.css
+++ b/static/css/find_dog.css
@@ -241,6 +241,9 @@ select.filter-breed {
 /**
  * Pagination
  */
+#pagination {
+  background-color: #9398B5;
+}
 .paginationjs {
   display: flex;
   align-items: center;
@@ -271,4 +274,12 @@ select.filter-breed {
 
 .paginationjs-pages>ul {
   font-size: 2rem !important;
+}
+
+/**
+ * Footer container
+ */
+.footer-container {
+  background-color: #9398B5;
+  color: #9398B5;
 }
