--- a/templates/index.html
+++ b/templates/index.html
@@ -84,8 +84,8 @@
 
         <div class="row justify-content-center">
           <div class="col text-center">
-            <h1>큰 제목</h1>
-            <h2>작은 제목</h2>
+            <h1>유기견 매칭 AI추천 시스템</h1>
+            <h2>당신의 반려견을 찾아드려요</h2>
           </div>
         </div>
 
@@ -168,8 +168,8 @@
         <div class="row justify-content-center">
 
           <div class="col-12 text-center">
-            <h1>여기에는 동물의 필터 적용 시켜서 동물 찾기 기능이 들어갔으면.</h1>
-            <h2>작은 제목</h2>
+            <h1>현재 보호중인 유기견들을 찾아봐요</h1>
+            <h2></h2>
           </div>
 
           <div class="col-12 text-center">
