--- a/templates/dog_info.html
+++ b/templates/dog_info.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>서초 AI 프로젝트 제목</title>
-  
+
   <!-------------------- CSS IMPORTS -------------------->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link href="https://unpkg.com/survey-jquery/modern.min.css" type="text/css" rel="stylesheet">
@@ -15,7 +15,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.4/pagination.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
-  
+
   <!-------------------- MAIN CSS -------------------->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/dog_info.css') }}">
 
@@ -89,7 +89,7 @@
 
         <!-- LINK to FIND DOG SECTION -->
         <li class="nav-item ms-2">
-          <a class="nav-link active" href="#find-dog-section">유기견</a>
+          <a class="nav-link active" href="#find-dog-section" onclick="moveToAbandonedDogPage()">유기견</a>
         </li>
 
         <!-- LINK to SURVEY SECTION -->
@@ -157,7 +157,7 @@
             <div class="col-9">
 
               <div class="filter-region-container row ps-0">
-                <select id="city-filter-list-toggle" class="filter-state form-select col" style="padding-right: 12px;">
+                <select id="city-filter-list-toggle" class="filter-state form-select col" name="city-filter-list-toggle" style="padding-right: 12px;">
                   <option selected value="전체">모든 지역</option>
                   <option value="서울특별시">서울특별시</option>
                   <option value="부산광역시">부산광역시</option>
@@ -184,7 +184,7 @@
                   <option selected value="전체">전체</option>
                 </select>
 
-                <select id="city-filter-list-after" class="filter-city form-select col" style="display: none; padding-right: 12px;">
+                <select id="city-filter-list-after" class="filter-city form-select col" name="city-filter-list-after" style="display: none; padding-right: 12px;">
                   <option id="city-filter-default" selected value='전체'>전체</option>
                 </select>
               </div>
@@ -203,7 +203,7 @@
             </div>
 
             <div class="col-9 ps-0">
-              <select class="filter-breed form-select" style="padding-right: 12px;">
+              <select id="filter-breed" class="filter-breed form-select" name="filter-breed" style="padding-right: 12px;">
               </select>
             </div>
 
@@ -214,7 +214,7 @@
         <!-- Modal Footer -->
         <div class="modal-footer align-items-center justify-content-center d-flex">
           <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
-          <button type="button" class="btn btn-primary">검색하기</button>
+          <button type="button" class="filter-submit-button btn btn-primary" onclick="filterSearch()">검색하기</button>
         </div>
 
       </div>
