설문 결과 연동 및 결과창(진행중)

--- a/static/css/survey_result.css
+++ b/static/css/survey_result.css
@@ -112,8 +112,11 @@ body {
 }
 
 /**
- * SURVEY PAGE SECTION
+ * SURVEY RESULT SECTION
  */
+/* .survey-result-container {
+  padding-top: 72px;
+} */
 .survey-section,
 .survey-bg {
   background-size: 250px;
