--- a/templates/survey_result.html
+++ b/templates/survey_result.html
@@ -15,7 +15,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-------------------- MAIN CSS -------------------->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/survey.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/survey_result.css') }}">
   
   <!-------------------- JS IMPORTS(PRE) -------------------->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -63,19 +63,66 @@
   <!-------------------- SURVEY PAGE -------------------->
   <section class="container-fluid min-vh-100 px-0 align-items-center survey-section" style="background-image: url({{ url_for('static', filename='img/animated-dog-3.jpg') }})">
 
-    <div class="overlay-survey-page-section min-vh-100 survey-bg" style="background-image: url({{ url_for('static', filename='img/animated-dog-3.jpg') }})">
+    <div class="survey-result-container container pt-4">
+      <!-- Survey results will be displayed here -->
+      <div id="surveyResult" class="bg-info min-vh-100">
 
-      <div class="survey-container container">
-        <!-- Survey questions will be displayed here -->
-        <div id="surveyElement"></div>
+        <div class="row">
+
+          <div class="col-12 text-center">
+            <h1>유기견 매칭 AI추천 결과</h1>
+            <h2>귀하와 적합한 유기견 {{ survey_results["Ranking_Count"] }}마리를 찾았어요!</h2>
+          </div>
+
+          <div class="col-12">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="..." class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="..." class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="..." class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        
       </div>
-
     </div>
 
   </section>
 
   <!-------------------- MAIN JS -------------------->
-  <script src="{{ url_for('static', filename='js/survey.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/survey_result.js') }}"></script>
 
   <!-------------------- JS IMPORTS -------------------->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.min.js"></script>
