--- a/templates/survey_result.html
+++ b/templates/survey_result.html
@@ -16,7 +16,7 @@
 
   <!-------------------- MAIN CSS -------------------->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/survey_result.css') }}">
-  
+
   <!-------------------- JS IMPORTS(PRE) -------------------->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://unpkg.com/survey-jquery"></script>
@@ -71,7 +71,7 @@
 
           <div class="col-12 text-center">
             <h1>유기견 매칭 AI추천 결과</h1>
-            <h2>귀하와 적합한 유기견 {{ survey_results["Ranking_Count"] }}마리를 찾았어요!</h2>
+            <h2>귀하와 적합한 유기견 {{ ranking_order|length }}마리를 찾았어요!</h2>
           </div>
 
           <div class="col-12">
@@ -83,21 +83,21 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="..." class="d-block w-100" alt="...">
+                  <img src="" class="d-block w-100" alt="">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
+                  <img src="" class="d-block w-100" alt="">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Some representative placeholder content for the second slide.</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
+                  <img src="" class="d-block w-100" alt="">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Some representative placeholder content for the third slide.</p>
@@ -115,7 +115,7 @@
             </div>
           </div>
         </div>
-        
+
       </div>
     </div>
 
