--- a/templates/survey_result.html
+++ b/templates/survey_result.html
@@ -63,55 +63,67 @@
   <!-------------------- SURVEY PAGE -------------------->
   <section class="container-fluid min-vh-100 px-0 align-items-center survey-section" style="background-image: url({{ url_for('static', filename='img/animated-dog-3.jpg') }})">
 
-    <div class="survey-result-container container pt-4">
+    <div class="survey-result-container container">
       <!-- Survey results will be displayed here -->
       <div id="surveyResult" class="bg-info min-vh-100">
 
-        <div class="row">
+        <div class="survey-result-carousel row bg-warning justify-content-center vh-100 m-0">
 
           <div class="col-12 text-center">
             <h1>유기견 매칭 AI추천 결과</h1>
             <h2>귀하와 적합한 유기견 {{ ranking_order|length }}마리를 찾았어요!</h2>
+            <!-- <h2></h2> -->
           </div>
 
-          <div class="col-12">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <div class="row justify-content-center m-0">
+            <div class="col-6">
+              <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+
+                <div class="carousel-inner">
+
+                  <div class="carousel-item active">
+                    <img src="{{ ranking_order[0]['popfile'] }}" class="h-100 d-block" alt="">
+                    <div class="carousel-caption">
+                      <h5>귀하의 성향과 {{ ranking_order[0]["rec_score"] }} 적합한 유기견</h5>
+                      <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                  </div>
+
+                  <div class="carousel-item">
+                    <img src="" class="d-block w-100" alt="">
+                    <div class="carousel-caption">
+                      <h5>Second slide label</h5>
+                      <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+
+                  <div class="carousel-item">
+                    <img src="" class="d-block w-100" alt="">
+                    <div class="carousel-caption">
+                      <h5>Third slide label</h5>
+                      <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+
+                </div>
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+
               </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="" class="d-block w-100" alt="">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img src="" class="d-block w-100" alt="">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img src="" class="d-block w-100" alt="">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                  </div>
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
             </div>
           </div>
         </div>
