--- a/templates/survey_result.html
+++ b/templates/survey_result.html
@@ -69,50 +69,83 @@
 
         <div class="survey-result-carousel row h-100 bg-warning justify-content-center m-0">
 
-          <div class="col-12 h-25 text-center">
-            <h1>유기견 매칭 AI추천 결과</h1>
-            <h2>귀하와 적합한 유기견 {{ ranking_order|length }}마리를 찾았어요!</h2>
+          <div class="survey-result-title col-12 align-items-center justify-content-center d-flex">
+            <div class="row">
+              <div class="col-12 text-center">
+                <h1>유기견 매칭 AI추천 결과</h1>
+              </div>
+              <div class="col-12 text-center">
+                <h2>귀하와 적합한 유기견 {{ ranking_order|length }}마리를 찾았어요!</h2>
+              </div>
+            </div>
             <!-- <h2></h2> -->
           </div>
 
-          <div class="col-12 h-75">
-            <div class="row justify-content-center m-0">
+          <div class="survey-result-carousel col-12 p-0 justify-content-center align-items-center d-flex">
+            <div class="row justify-content-center align-items-center d-flex h-100 m-0">
 
-              <div class="col-6">
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+              <div class="col-12 col-lg-8 h-100">
+                <div id="carouselExampleCaptions" class="carousel slide h-100 row justify-content-center align-items-center m-0 d-flex" data-bs-ride="false">
 
-                  <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                  </div>
-
-                  <div class="carousel-inner">
-
-                    <div class="carousel-item active">
-                      <img src="{{ ranking_order[0]['popfile'] }}" class="h-100 d-block" alt="">
-                      <div class="carousel-caption">;
+                  <div class="carousel-inner col-12 m-0 p-0">
+                    <div class="carousel-item active h-100 m-0 row">
+                      <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12">
+                        <img src="{{ ranking_order[0]['popfile'] }}" class="carousel-dog-img" alt="">
+                      </div>
+                      <div class="carousel-caption position-relative top-0 start-0 end-0 bottom-0 col-12">
                         <h5>귀하의 성향과 {{ ranking_order[0]["rec_score"] }} 적합한 유기견</h5>
                         <p>Some representative placeholder content for the first slide.</p>
                       </div>
                     </div>
 
-                    <div class="carousel-item">
-                      <img src="" class="d-block w-100" alt="">
-                      <div class="carousel-caption">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                    <div class="carousel-item h-100 m-0 row">
+                      <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12">
+                        <img src="{{ ranking_order[1]['popfile'] }}" class="carousel-dog-img" alt="">
+                      </div>
+                      <div class="carousel-caption position-relative top-0 start-0 end-0 bottom-0 col-12">
+                        <h5>귀하의 성향과 {{ ranking_order[1]["rec_score"] }} 적합한 유기견</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
                       </div>
                     </div>
 
-                    <div class="carousel-item">
-                      <img src="" class="d-block w-100" alt="">
-                      <div class="carousel-caption">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                    <div class="carousel-item h-100 m-0 row">
+                      <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12">
+                        <img src="{{ ranking_order[2]['popfile'] }}" class="carousel-dog-img" alt="">
+                      </div>
+                      <div class="carousel-caption position-relative top-0 start-0 end-0 bottom-0 col-12">
+                        <h5>귀하의 성향과 {{ ranking_order[2]["rec_score"] }} 적합한 유기견</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
                       </div>
                     </div>
 
+                    <div class="carousel-item h-100 m-0 row">
+                      <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12">
+                        <img src="{{ ranking_order[3]['popfile'] }}" class="carousel-dog-img" alt="">
+                      </div>
+                      <div class="carousel-caption position-relative top-0 start-0 end-0 bottom-0 col-12">
+                        <h5>귀하의 성향과 {{ ranking_order[3]["rec_score"] }} 적합한 유기견</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                      </div>
+                    </div>
+
+                    <div class="carousel-item h-100 m-0 row">
+                      <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12">
+                        <img src="{{ ranking_order[4]['popfile'] }}" class="carousel-dog-img" alt="">
+                      </div>
+                      <div class="carousel-caption position-relative top-0 start-0 end-0 bottom-0 col-12">
+                        <h5>귀하의 성향과 {{ ranking_order[4]["rec_score"] }} 적합한 유기견</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                      </div>
+                    </div>
+
+                  </div>
+
+                  <div class="carousel-indicators mx-0 col-12 position-relative">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
                   </div>
 
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
